Added unit testing, including running headless from the build script. The tests fail right now intentionally.
I changed one line in env.rhino.1.2.js. See http://groups.google.com/group/envjs/browse_frm/thread/15399517e359a878/d482a8f66547e822?tvc=1#d482a8f66547e822

--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -1,6 +1,7 @@
 Alert.js To Do List
 ===================
 [ ] Add unit testing
+[ ] Run unit tests headless http://www.build-doctor.com/2010/12/08/javascript-bdd-jasmine/
 [ ] Use auth header instead of URL parameter (option?)
 [ ] Clean up JSLint errors, then add 'static-analysis' target to 'build' target
 [ ] Check for Prototype?
