--- a/trunk/doc/todo.txt
+++ b/trunk/doc/todo.txt
@@ -1,6 +1,7 @@
 Alert.js To Do List
 ===================
 [ ] Add unit testing
+[ ] Run unit tests headless http://www.build-doctor.com/2010/12/08/javascript-bdd-jasmine/
 [ ] Use auth header instead of URL parameter (option?)
 [ ] Clean up JSLint errors, then add 'static-analysis' target to 'build' target
 [ ] Check for Prototype?
